<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ionSpinner"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/fieldLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >
	        <TextView
	            android:id="@+id/fieldLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:text=""
	            android:gravity="center_vertical|right"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <Spinner
	            android:id="@+id/fieldUnits"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:entries="@array/field_units"
	            android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fieldLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/field_strength"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/notificationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/interference"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible" />

    </RelativeLayout>

    <Spinner
        android:id="@+id/ionSpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp" 
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@+id/centerAnchor"
        android:background="@android:drawable/dark_header"
        />
    <Space
        android:id="@+id/centerAnchor"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ionSpinner" >

        <TextView
            android:id="@+id/frequencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/freq_format"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/ionWeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="@string/ion_weight_format"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ionChargeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/ionChargeSpinner"
            android:text="@string/ion_charge"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        
        <ImageButton
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/frequencyLabel"
            android:background="@android:color/transparent"
            android:contentDescription="@string/prev"
            android:onClick="onPrevClicked"
            android:src="@drawable/ic_prev" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/frequencyLabel"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next"
            android:onClick="onNextClicked"
            android:src="@drawable/ic_next" />

        <Spinner 
            android:id="@+id/ionChargeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:entries="@array/ion_charges"
            android:drawSelectorOnTop="true"
            />

        <TextView
            android:id="@+id/detailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frequencyLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/freq_description_format"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

</RelativeLayout>